--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  provider: ^6.1.1
-  firebase_core: ^2.24.0
-  firebase_auth: ^4.11.0
-  cloud_firestore: ^4.15.0
-  firebase_storage: ^11.3.0
-  shared_preferences: ^2.2.2
+  cupertino_icons: ^1.0.6
+  provider: ^6.1.5+1
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  cloud_firestore: ^6.0.1
+  firebase_storage: ^13.0.1
+  shared_preferences: ^2.2.15
   http: ^1.1.0
   flutter_localizations:
     sdk: flutter
@@ -26,7 +26,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
